fix grammar*s mistake

--- a/2_abstract/2_abstract_ua.tex
+++ b/2_abstract/2_abstract_ua.tex
@@ -1,39 +1,38 @@
 \chapter*{Реферат}
 
-Дисертація містить 
-%\pageref{LastPage} 
+Дисертація містить
+\pageref{LastPage}
 сторінки,
-%\TotalValue{totalfigures} 
+\TotalValue{totalfigures}
 ілюстрацій
-і бібліографію з 
-%\total{citenum} 
+і бібліографію з
+\total{citenum}
 найменувань.
 
-Відеозаписи лекцій вже не рідкість 
-в умовах дистанційного навчання.
-Відео може бути у незручному форматі для 
-студентів або містити різні артефакти 
-через стиснення з втратами, якість зйомки та 
-інші фактори. Добре було б мати презентацію навчального 
-матеріалу, яка містить лише текст з дошки, 
+Відеозаписи лекцій вже не рідкість в умовах дистанційного навчання.
+Відео може бути у незручному форматі для студентів або містити різні артефакти
+через стиснення з втратами, якість зйомки та  інші фактори. Добре було б мати
+презентацію навчального матеріалу, яка містить лише текст з дошки,
 оскільки це більш наближено до формату конспекту.
 
-Метою роботи є 
-створення алгоритму, який з відео лекції 
-робить панорамні слайди без викладача.
+Метою роботи є створення інформаційної технології, якф з відео лекції
+зможе створити панорамні слайди без викладача.
 
-Для досягнення мети було використано
+Для досягнення мети було використано:
 \begin{itemize}
   \item
-    Метод SIFT для знаходження ключових точок зображення;  
+        SIFT алгоритм для знаходження ключових точок зображення;
+  \item   
+        гомографію для отримання панорамних слайдів;
   \item
-    Гомографію для отримання панорамних сладів;
+        алгоритм максимального потоку Бойкова-Колмогорова
+        для отримання маски рухомих об'єктів;
   \item
-    Алгоритм максимального потоку Бойкова-Колмогорова
-    для отримання маски рухомих об'єктів;
+        згорткові нейронні мережі для детекції людини;
   \item
-    Оператори знешумлення та бінаризації зображень.
+        Оператори знешумлення та бінаризації зображень.
 \end{itemize}
 
+Ключові слова:
 \MakeUppercase{оброблення зображень, інтелектуальне оброблення відео,
-стабілізація відео}
+  стабілізація відео}
