--- a/3_preface/1_symbols.tex
+++ b/3_preface/1_symbols.tex
@@ -15,4 +15,4 @@
  \noindent$P$~---~множина координат пікселів зображення; \\
  \noindent$C$~---~множина інтенсивностей пікселів зображення; \\
  \noindent$F_p^i$~---~інтенсивність пікселя з координатою $p$$\in$$P$; \\
- Б-К алгоритм ~---~алгоритм Бойкова-Колмогорова; \\
+ Б-К алгоритм ~---~алгоритм Бойкова-Колмогорова. \\
