--- a/4_analogs/1_preface.tex
+++ b/4_analogs/1_preface.tex
@@ -1,6 +1,6 @@
 У першому розділі розглядаються попередні роботи
 по створенню слайдів з відеозаписів або фотографій дошки.
-Проаналізовано різні методи створення панорамних слайдів
-та алгоритми прибирання викладача з відео. Також 
-описані переваги даної роботи над аналогічними. 
-Зроблена постановка задачі.
+Аналізуються різні методи створення панорамних слайдів
+та алгоритми прибирання викладача з відео. Описуються переваги 
+даної роботи над аналогічними та
+робиться постановка задачі створення панорамних слайдів.
