--- a/4_analogs/3_conclusion.tex
+++ b/4_analogs/3_conclusion.tex
@@ -2,11 +2,11 @@
 
 Як ми бачимо, всі вищеописані алгоритми є частковими (тобто не повністю вирішують всі проблеми
 з оцифруванням дошки): деякі методи опрацьовують тільки написи з дошки, 
-при чому досить непогано; якісь роблять панорамні знімки тільки з фотографій дошки.
-Спільними елементами вищеописаних алгоритмів-аналогів є використання 
+причому досить непогано; частина аналогів створюють панорамні знімки тільки з фотографій дошки.
+Спільними елементами вищеописаних аналогів є використання 
 темпорального медіанного фільтру для видалення рухомих об'єктів.
 У даній роботі даний метод теж має місце, але вже для знешумлення
-вихідних слайдів, а не видалення лектора з відео.
+вихідних слайдів, а не для видалення лектора з відео.
 Найбільшими недоліками всіх аналогів є час обробки відео. Більшість технологій
 тестувались на відео поганої якості, наприклад 240р - 720р. 
 Також жодний аналог не пропонує створювати панорамні знімки по мірі руху камери під
