--- a/6_mask/2_bk_algorithm.tex
+++ b/6_mask/2_bk_algorithm.tex
@@ -48,7 +48,7 @@
     \item Потік завжди додатній.
 \end{enumerate}
 
-Як вже було зазначено вирішивши задача максимального потоку одночасно вирішується і задача
+Як вже було зазначено розв'язавши задачу, максимального потоку одночасно вирішується і задача
 мінімального зрізу. Даний висновок отримується з Max-Flow Min-Cut теореми.
 Мінімальним зрізом є множина тих ребер, які стали насиченими після знаходження максимального
 потоку. Тобто мінімальний зріз створює дві множини, що формують множину всіх дуг.
