--- a/2_abstract/1_abstract_en.tex
+++ b/2_abstract/1_abstract_en.tex
@@ -1,40 +1,43 @@
 \chapter*{Abstract}
 
-The thesis contains 
-%\pageref{LastPage} 
+The thesis contains
+\pageref{LastPage}
 pages,
-%\TotalValue{totalfigures} 
+\TotalValue{totalfigures}
 figures
-and 
-%\total{citenum} references.
+and
+\total{citenum} references.
 
-Video recordings of lectures are no longer a rarity in 
-the conditions of distance learning. 
-Videos may be in an inconvenient format for 
-students or contain different artifacts due 
-to compression, camera quality, and other factors. 
-It is useful to have a presentation of the study material, 
-which contains only the text from the board 
-because such a view of the material is most 
-like the compendium. 
+Video recordings of lectures are no longer a rarity in
+the conditions of distance learning.
+Videos may be in an inconvenient format for
+students or contain different artifacts due
+to compression, camera quality, and other factors.
+It is useful to have a presentation of the study material,
+which contains only the text from the board
+because such a view of the material is most
+like the compendium.
 
-The item of this work 
-is creating an algorithm for obtaining panorama 
+The item of this work
+is creating an algorithm for obtaining panorama
 slides without a teacher from video lecture.
 
-To perform the study
+To perform the study were used:
 \begin{itemize}
   \item
-    SIFT method for obtaining image's keypoints;
-  \item 
-    Homography for getting panorama slides;
-  \item 
-    Boykov-Kolmogorov Max-flow algorithm for creating mask of
-    moving objects;
+        SIFT method for obtaining image's keypoints;
   \item
-    Denoising and binarizing operators;
+        homography for getting panorama slides;
+  \item
+        Boykov-Kolmogorov max-flow algorithm for creating mask of
+        moving objects;
+  \item
+        convolutional neural networks for human detecting;
+  \item
+        denoising and binarizing operators.
 \end{itemize}
 
-\MakeUppercase{images processing, intellectual video 
-processing, \\ 
-video stabilization}
+Keywords:
+\MakeUppercase{images processing, intellectual video
+  processing, \\
+  video stabilization}
