--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -1,68 +1,78 @@
 \chapter*{Вступ}
 \addcontentsline{toc}{chapter}{Вступ}
-
-Дана робота завдячує Кригіну Валерію Михайловичу~---~молодшому
-науковому співробітнику Відділу обробки та розпізнавання
-образів Міжнародного науково-навчального центру інформаційних
-технологій і систем НАН України та МОН України.
+% Дана робота завдячує Кригіну Валерію Михайловичу~---~молодшому
+% науковому співробітнику Відділу обробки та розпізнавання
+% образів Міжнародного науково-навчального центру інформаційних
+% технологій і систем НАН України та МОН України.
 
 \textbf{Актуальність роботи.}
-Задача створення конспекту лекцій не є новою,
-а з масовим переходом навчання у віддалений режим
-стала більш актуальною проблема створення якісних
+Задача створення конспекту лекцій не є новою, оскільки вже є
+роботи по даній темі. Вона стала ще більш актуально оскільки
+з масовим переходом навчання у віддалений режим
+постала проблема створення якісних
 лекційних матеріалів, зокрема слайдів, які містять
 стислу суть занять. Було б добре мати технологію, що
 перетворюватиме відео лекцію у стисле слайд шоу, на
 якому будуть написи з дошки без викладача і до того
 ж всю область дошки, навіть якщо камера
-рухалась.
+рухалась. 
+
+Дана інформаційна технологія має мати ряд властивостей:
+\begin{itemize}
+      \item мобільність (працювати на звичайному смартфоні);
+      \item швидкість обробки відеозапису лекції;
+      \item якість (мати мінімальну кількість дефектів на слайдах, 
+      а саме викладача або не правильної склейки кадрів).
+\end{itemize}
+На даний час жодний аналог не може такого дати, тому була поставлена
+задача створити таку технологію.
 
 \textbf{Мета і завдання дослідження.}
 
-\textit{Об'єкт дослідження}~---~математичні методи
-реєстрації зображень.
+\textit{Об'єкт дослідження}~---~відеозаписи лекцій.
 
 \textit{Предмет дослідження}~---~автоматична обробка
 відеозаписів.
 
-Метою роботи є розробка алгоритму, що перетворює відео
+Метою роботи є розробка алгоритму, що перетворює відеозаписи лекцій
 лекції у панорамні знімки без викладача.
 
 Завдання наступні:
 \begin{enumerate}
-  \item
-        вивчити та доповнити математичні методи,
-        що допоможуть визначати рухомі об'єкти;
-  \item
-        опрацювати літературу про згорткові мережі, які застосовуються
-        для знаходження в кадрі людини;
-  \item
-        вивчити методи обробки та порівняння зображень,
-        які знадобляться для створення панорамних знімків;
-  \item
-        розробити демонстраційне програмне забезпечення.
+      \item
+            вивчити та доповнити математичні методи,
+            що допоможуть визначати рухомі об'єкти;
+      \item
+            опрацювати літературу про згорткові нейронні мережі, які застосовуються
+            для знаходження в кадрі людини;
+      \item
+            вивчити методи обробки та порівняння зображень для створення панорамних знімків;
+      \item
+            розробити демонстраційне програмне забезпечення.
 \end{enumerate}
 
 \textbf{Методи дослідження:}
 \begin{enumerate}
-  \item опрацювання літератури за темою;
-  \item створення теоретичного підґрунтя алгоритму;
-  \item написання програми;
-  \item аналіз отриманих результатів.
+      \item опрацювання літератури за темою;
+      \item створення теоретичного підґрунтя алгоритму;
+      \item написання програми;
+      \item аналіз отриманих результатів.
 \end{enumerate}
 
 \textbf{Наукова новизна одержаних результатів.}
 
 Створено алгоритм та реалізовано інформаційну технологію
-для одержання панорамних слайдів з відео лекції.
+для одержання панорамних слайдів з відеозапису лекції.
 
 \textbf{Практичне значення одержаних результатів.}
 
 За допомогою програми викладач може надати короткий вміст
 відео матеріалу. Наступними кроками є автоматичне детектування
-дошки, розбиття її сектори та розпізнавання написаного на
+дошки, розбиття її на сектори та розпізнавання написаного на
 дошці тексту та формул.
 
 \textbf{Публікації.}
-Міжнародний науковий журнал “Control Systems and Computers” 
-(“Системи керування та комп'ютери”).
+Стаття <<Перетворення відеозапису з дошки у слайд-шоу>> авторів 
+Кригін В. М. та Шило М. К. прийнята до друку 
+Міжнародним науковим журналом “Control Systems and Computers”
+(“Системи керування та комп'ютери”) та буде опублікована в № 2 (298) 2022 року.
