--- a/4_analogs/2_examples.tex
+++ b/4_analogs/2_examples.tex
@@ -4,12 +4,10 @@
 
 \subsection{Перша робота по оцифровуванню дошки}
 
-У 2004 році інженери з Microsoft Research \textit{Zhengyou Zhang}
-та \textit{Li-wei He} представили свій алгоритм по скануванню написів
-білої дошки.
-
-В їхній роботі \cite{zhang:2004} обробляються фотографії білої дошки, локалізується область
-написів, вирівнюється у прямокутну форму і бінаризуються написи без втрати
+У 2004 році інженери з Microsoft Research Zhengyou Zhang
+та Li-wei He представили свій алгоритм по скануванню написів
+білої дошки \cite{zhang:2004}. Система оброблює фотографії білої дошки, локалізує область
+написів, вирівнює у прямокутну форму дошку та бінаризує написи без втрати
 кольору (Рис. \ref{fig:zhang:2004}).
 \begin{figure}[h]
   \centering
@@ -27,22 +25,22 @@
 \end{figure}
 
 Також автори реалізували склейку зображень дошки зроблених з різних
-перспектив за допомогою гомографії. Гарна якість оцифрування дошки
+ракурсів за допомогою гомографії. Гарна якість оцифрування дошки
 досягається насамперед тим, що вона має білий колір, що в свою чергу
-накладає обмеження для використання технології з дошками зеленого відмінного
+накладає обмеження на використання технології з дошками відмінного
 від білого кольорів.
 У наступній свої роботі \cite{zhang:2007} ці ж самі автори побудували
 технологію, яка в реальному часі оброблює відеозапис, видаляє людину біля
 дошки за допомогою часової медіани, але тут немає
-панорамного склеювання знімків. Головна ідея роботи була зробити
-програму для телеконференсій.
+панорамного склеювання знімків. Головна ідея роботи полягала у розробці
+програми для телеконференсій.
 
 \subsection{Автоматичне сканування дошки}
 
-Автори даної роботи \cite{wienecke} створили програму яка переводить написи на білій
+Автори роботи \cite{wienecke} створили програму яка переводить написи на білій
 дошці у цифрові (Рис. \ref{fig:wienecke}). Вони реалізували локалізацію тексту та подальшу
 його обробку. Дана технологія не вирішує проблему перекривання викладачем написів
-або дошку іншого кольору відмінного від білого.
+або дошку іншого кольору, відмінного від білого.
 
 \begin{figure}[H]
   \centering
@@ -59,20 +57,20 @@
   }
 \end{figure}
 
-Можна помітити, що як і в попередній роботі гарна якість виокремлення написів
+Можна помітити, що, як і в попередній роботі, гарна якість виокремлення написів
 досягається тим що дошка білого кольору.
 
 \subsection{Відстежування об'єкту та віднімання фону від Стенфордських науковців}
 
-У 2012 році науковці зі Стенфордського університету \textit{Alex Gonzalez,
-  Bongsoo Suh, Eun Soo Choi} представили технологію \cite{suh} локалізацію дошки
-(навіть такої яка розділена на частини), відстеження викладача та його
+У 2012 році науковці зі Стенфордського університету Alex Gonzalez,
+  Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh} локалізації дошки
+(навіть такої, яка розділена на частини), відстеження викладача та його
 подальше прибирання. Алгоритм також може працювати з різними кольорами
 дошок. Для прибирання викладача і всіх рухомих об'єктів автори також
 використали тимчасову медіану (Рис. \ref{fig:suh}).
 
 Дана програма не працює в реальному часі, оскільки всі операції над кадрами
-відео займають тривалий час, не кажучи вже, що відео перед обробкою
+відео займають тривалий час, а також саме відео перед обробкою
 піддають компресії.
 
 \begin{figure}[H]
@@ -85,15 +83,14 @@
 
 Головною особливістю даної роботи є те, що  алгоритм автоматично локалізує
 різну кількість дошок. Однак варто відмітити, що тестування відбувалось на
-відео лекціях де камера знімає всю дошку і не рухається за викладачем. Тим більше
-якість отриманих написів теж погана.
+відео лекціях де камера знімає всю дошку і не рухається за викладачем.
 
-\subsection{Відокремлення написів дошки від Тайванського університету}
+\subsection{Відокремлення написів дошки}
 
 У 2014 році науковці із Тайванського університету представили свій аналог \cite{yeh}
 алгоритму по оцифровуванні дошки (Рис. \ref{fig:yeh}). Для видалення викладача автори застосували
-алгоритм кластеризації K-means. Для отримання бінаризованих написів з дошки
-використана адаптивне вирівнювання. Варто відмітити гарну
+алгоритм кластеризації k-means. Для отримання бінаризованих написів з дошки
+використане адаптивне вирівнювання. Варто відмітити гарну
 якість власного методу зменшення шуму.
 
 \begin{figure}[H]
@@ -111,17 +108,17 @@
   }
 \end{figure}
 
-Автори не надали швидкість обробки всього відео. Щоб отримати якісну сегментацію
+Автори не надали час обробки всього відео. Щоб отримати якісну сегментацію
 дошки та викладача потрібно, щоб кадр містив тільки викладача, причому щоб одяг викладача
 був сильно відмінним від кольору дошки. Це потрібно для коректної роботи алгоритму K-means.
-Тобто нема гарантії, що якийсь рухомий об'єкт не стане  дошкою під час класифікації.
+Тобто нема гарантії, що якийсь рухомий об'єкт не буде класифікований як дошка під час класифікації.
 
 \subsection{Сучасна робота}
 
 На даний момент найсучаснішою повноцінною технологією \cite{davila:2017}, яка оцифровує дошку є робота
-науковців з університету Рочестер. Автори \textit{Kenny Davila та Richard Zanibbi}
-використали просторовий темпоральний індекс для виокремлення написів і викладача (Рис. \ref{fig:davila:2017}).
-Відбувається видалення не самого викладача,  а його контурів, після бінаризації картинки.
+науковців з університету Рочестер. Автори Kenny Davila та Richard Zanibbi
+використали просторово-часовий індекс для виокремлення написів і викладача (Рис. \ref{fig:davila:2017}).
+Відбувається видалення не самого викладача,  а його контурів після бінаризації картинки.
 Варто відмітити, що і тут камера має бути нерухомою.
 
 \begin{figure}[H]
