--- a/4_analogs/3_conclusion.tex
+++ b/4_analogs/3_conclusion.tex
@@ -1,7 +1,7 @@
 \chapterConclusion
 
-Як ми бачимо, всі вищеописані алгоритми є частковими (тобто не повністю вирішують всі проблеми
-з оцифруванням дошки): деякі методи опрацьовують тільки написи з дошки, 
+Як ми бачимо, всі вищеописані алгоритми є частковими (не повністю вирішують проблеми
+з оцифруванням дошки): деякі методи обробляють тільки написи з дошки, 
 причому досить непогано; частина аналогів створюють панорамні знімки тільки з фотографій дошки.
 Спільними елементами вищеописаних аналогів є використання 
 темпорального медіанного фільтру для видалення рухомих об'єктів.
