--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -1,6 +1,6 @@
 \section{Постановка задачі}
 
-Головна ціль даної роботи  - це створення власної інформаційної технології
+Головна ціль даної роботи ~---~ це створення власної інформаційної технології
 на вхід якої буде даватись відео лекції, а на вихід панорамні слайди
 без викладача.
 
@@ -8,14 +8,14 @@
 вирішити такі проблеми:
 \begin{enumerate}
 	\item
-	      \textbf{Стабілізація кадрів} \\
+	      Стабілізація кадрів.\\
 	      Багато відео лекцій записуються не в найкращих умовах.
 	      Камера може випадково затруситися, якщо її прикріпити до столу
 	      де студенти пишуть лекцію, або закріплена не стабільно, таким чином
 	      це заважає нормально слухати лекцію і фокусуватись на написах дошки.
 
 	\item
-	      \textbf{Прибирання викладача} \\
+	      Прибирання викладача.\\
 	      Також однією із задач є видалення викладача з відео, оскільки
 	      було поставлено за мету надавати користувачу чисті написи з дошки.
 	      Є чимало методів як вирішувати цю задачу. Можна локалізувати тільки
@@ -24,7 +24,7 @@
 	      з часом інформацію з дошки, яка була тимчасово перекрита.
 
 	\item
-	      \textbf{Створення панорамних слайдів} \\
+	      Створення панорамних слайдів.\\
 	      Часто, коли дошки сильно об'ємні по площі камера знімає тільки ту частину де
 	      викладач щось пише. Під час лекції камеру переміщують так, щоб лектор був завжди
 	      в полі зору. Таким чином, якщо студент не встиг переписати все з однієї частини
@@ -32,8 +32,8 @@
 	      мати слайди, які по мірі руху камери містили всю дошку.
 
 	\item
-	      \textbf{Оцифровування написів} \\
-	      Умови освітлення, розводи на дошці, неякісна зйомка, шуми - все це сильно впливає
+	      Оцифровування написів. \\
+	      Умови освітлення, розводи на дошці, неякісна зйомка, шуми ~---~ все це сильно впливає
 	      на сприйняття лекційного матеріалу. Непогано було б мати бінаризовані слайди без
 	      шумів тільки з написами як в записнику.
 
