--- a/5_problem/3_solution.tex
+++ b/5_problem/3_solution.tex
@@ -19,7 +19,7 @@
 достатню кількість змін.
 
 Інформаційна технологія, що реалізує даний алгоритм, працює у
-напівавтоматичному режимі – вона потребує від користувача введення
+напівавтоматичному режимі ~---~ вона потребує від користувача введення
 деяких параметрів.
 \begin{enumerate}
     \item Крок або кількість кадрів між тими, які беруться в обробку.
@@ -29,9 +29,8 @@
     \item Кількість необхідних змін між двома панорамами для створення нового слайду.
 \end{enumerate}
 
-
 \usetikzlibrary{arrows,positioning,shapes}
-\begin{figure}
+\begin{figure}[H]
     \begin{center}
         \begin{tikzpicture}[node distance=4mm, >=latex',
                 block/.style = {draw, rectangle, minimum height=10mm, minimum width=28mm,align=center},
@@ -57,16 +56,15 @@
         \label{fig:pipeline}
     }
 \end{figure}
-
 \section{Вхід алгоритму}
 
 Для опису алгоритму створення панорамних слайдів потрібно визначити та
 описати об'єкти з якими взаємодіє інформаційна технологія.
 
-Дошка - це плоска поверхня, яку знімає камера. Це може бути крейдяна
+Дошка ~----~ це плоска поверхня, яку знімає камера. Це може бути крейдяна
 дошка, маркерна дошка, стіна тощо.
 
-Записи - це ті місця дошки, де відбулася зміна кольору, яка тривала
+Записи ~---~ це ті місця дошки, де відбулася зміна кольору, яка тривала
 відносно довгий час. Важливо зауважити, що ці записи мають бути
 саме у площині дошки, при чому людина яка проходить біля неї не вважається
 зміною кольору, оскільки цей рух був не тривалим.
@@ -79,13 +77,12 @@
 проте бажано, щоб ці об'єкти були рухливими, щоб алгоритм виявлення рухомих
 об'єктів їх помічав та для подальшого оновлення написів на дошці.
 
-Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення, де
-$P$$\to$$C$, де $P$ - множина координат пікселів, $С$ - скінченна множина можливих рівнів
+Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення
+$P \to C$, де $P$ ~---~ множина координат пікселів, $С$ ~---~ скінченна множина можливих рівнів
 яскравостей (інтенсивностей) пікселів.
-\begin{equation}
+\begin{equation*}
     P = [1, \ldots ,w]\times[1, \ldots, h], C \subset R
-\end{equation},
-
+\end{equation*}
 Відео \(F\) довжиною \(T\)
 є послідовністю \(\left( F^{i}:i = \overline{1,T} \right)\) кадрів
 \(F^{i}:P \rightarrow C\). Той факт, що піксель з координатою
