--- a/6_mask/4_cnn.tex
+++ b/6_mask/4_cnn.tex
@@ -317,22 +317,22 @@ $S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S
           вхідного зображення. Дана операція є краща за звичну згортку, оскільки бере всю інформацію
           з каналу зображення за один раз. Також операція стиснення відома під назвою глобального
           cереднього пулінгу  (англ. global average pooling). Це взяття середнього по кожному каналу.
-          \begin{equation}
+          \begin{equation*}
               z = F_{sq}(u_c) = \frac{\sum_{i=0}^{H} \sum_{j=0}^{W} u_c(i,j)}{H·W}
-          \end{equation}
+          \end{equation*}
           Вихід $1 \times 1 \times C$.
     \item \textbf{Операція збудження} створює множину ваг для кожного каналу шляхом застосування
           активацій $Sigmoid$ та $ReLU$ для двох повнозв'язних лінійних шарів
-          \begin{equation}
+          \begin{equation*}
               s = F_ex(z,W) = Sigmoid(FC_2ReLu(FC_1z))
-          \end{equation}
+          \end{equation*}
           Перший лінійний шар $FC_1$ використовується для зменшення розмірності $z$ з деяким
           множником $r$, тому після цього шару розмірність буде $1 \times 1 \times C/r$, а $FC_2$ навпаки
           для збільшення $ReLU(W_1z)$. Знаючи, що значення сигмоїди від 0 до 1, то можна
           масштабувати її вихід із входом в блок $u_c$
-          \begin{equation}
+          \begin{equation*}
               \widetilde{x_c} = F_{scale}(u_c,s_c) = s_c·u_c
-          \end{equation}
+          \end{equation*}
 \end{enumerate}
 
 Автори покращили даний підхід у своїй MobileNetv3, але з використанням
@@ -382,7 +382,7 @@ architecture structure), яка створена для  підбирання г
 
 Оскільки для відокремлення ознак застосовується в цій роботі SSD із
 структурними елементами MobileNetv3, тому є причина показати як саме SSD вдається
-локалізовувати об'єкти та його відмінності з YOLO.
+локалізувати об'єкти та його відмінності з YOLO.
 
 Мережа SSD (Рис. \ref{fig:cnn:ssd_architecture}) на відміну від YOLO проганяє зображення
 через шари лише один раз. Це пояснюється словами в назві Single Shot. SSD
