--- a/7_panorama/3_homography_estimation.tex
+++ b/7_panorama/3_homography_estimation.tex
@@ -16,8 +16,6 @@
     H^{i} \cdot p_{j}^{i + s} = c \cdot p_{j}^{i},\quad\forall i = \overline{1,4\ }
     \label{eq:h_connection}
 \end{equation}
-
-
 Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої гомографії
 \(H^{i}\). Цю матрицю можна використовувати для компенсації руху камери
 -- ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
@@ -59,7 +57,7 @@ $T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
 \end{equation}
 
 Таким чином ми приходимо до розв'язку системи:
-\begin{equation}
+\begin{equation*}
     \underbrace{
         \begin{bmatrix}
             x_1 & y_1 & 1 & 0   & 0   & 0 & -x_1x'_1 -y_1x'_1 \\
@@ -94,7 +92,7 @@ $T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
         y'_3 \\
         y'_4
     \end{bmatrix}
-\end{equation}
+\end{equation*}
 
 Варто відмітити, що ми потім  позбуваємось  $h_{33}$, щоб $H$ була нормованою, оскільки вона
 зв'язує точки площин, в яких 3-тя координата 1.
