--- a/5_problem/4_conclusion.tex
+++ b/5_problem/4_conclusion.tex
@@ -1,7 +1,7 @@
 \chapterConclusion
 
-Зроблена постановка задачі створення слайдів. Проведений аналіз 
-проблем. Описано ввідні дані алгоритму та запропонована 
-його блок-схема. Таким чином, для створення інформаційної технології 
-потрібно вивчити методи локалізації людини або рухливих об'єктів.
-Також потрібно зробити стабілізацію відео і панорамне склеювання кадрів. 
+Зроблена постановка задачі створення слайдів. Описано ввідні 
+дані алгоритму та запропонована його блок-схема. 
+Таким чином, для створення інформаційної технології 
+потрібно вивчити методи локалізації людини або рухливих об'єктів,
+зробити стабілізацію відео та панорамне склеювання кадрів. 
