--- a/index.tex
+++ b/index.tex
@@ -62,8 +62,8 @@
 \import{4_analogs/}{main.tex}
 \import{5_problem/}{main.tex}
 \import{6_mask/}{main.tex}
-% \import{7_panorama/}{main.tex}
-% \import{8_results/}{main.tex}
+\import{7_panorama/}{main.tex}
+\import{8_results/}{main.tex}
 
 
 % \clearpage
