fix some mistakes

--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -1,7 +1,7 @@
 \section{Постановка задачі}
 
 Головна ціль даної роботи ~---~ це створення власної інформаційної технології
-на вхід якої буде даватись відео лекції, а на вихід панорамні слайди
+на вхід якої буде даватись відеозапис лекції, а на вихід панорамні слайди
 без викладача.
 
 Для одержання бажаних результатів було запропоновано
@@ -36,7 +36,4 @@
 	      Умови освітлення, розводи на дошці, неякісна зйомка, шуми ~---~ все це сильно впливає
 	      на сприйняття лекційного матеріалу. Непогано було б мати бінаризовані слайди без
 	      шумів тільки з написами як в записнику.
-
 \end{enumerate}
-
-
