--- a/5_problem/3_solution.tex
+++ b/5_problem/3_solution.tex
@@ -20,13 +20,13 @@
 
 Інформаційна технологія, що реалізує даний алгоритм, працює у
 напівавтоматичному режимі ~---~ вона потребує від користувача введення
-деяких параметрів.
+деяких параметрів, а саме:
 \begin{enumerate}
-    \item Крок або кількість кадрів між тими, які беруться в обробку.
-    \item Ступінь згладжування маски рухомих об'єктів для алгоритму Бойкова-Колмогорова.
-    \item Рівень довіри присутності людини для згорткових мереж.
-    \item Крок між панорамами для перевірки необхідності створення нового панорамного слайду.
-    \item Кількість необхідних змін між двома панорамами для створення нового слайду.
+    \item крок або кількість кадрів між тими, які беруться в обробку;
+    \item ступінь згладжування маски рухомих об'єктів для алгоритму Бойкова-Колмогорова;
+    \item рівень довіри присутності людини для згорткових мереж;
+    \item крок між панорамами для перевірки необхідності створення нового панорамного слайду;
+    \item кількість необхідних змін між двома панорамами для створення нового слайду.
 \end{enumerate}
 
 \usetikzlibrary{arrows,positioning,shapes}
@@ -57,7 +57,6 @@
     }
 \end{figure}
 \section{Вхід алгоритму}
-
 Для опису алгоритму створення панорамних слайдів потрібно визначити та
 описати об'єкти з якими взаємодіє інформаційна технологія.
 
@@ -66,14 +65,14 @@
 
 Записи ~---~ це ті місця дошки, де відбулася зміна кольору, яка тривала
 відносно довгий час. Важливо зауважити, що ці записи мають бути
-саме у площині дошки, при чому людина яка проходить біля неї не вважається
+саме у площині дошки, при чому людина, яка проходить біля неї, не вважається
 зміною кольору, оскільки цей рух був не тривалим.
 
 В область огляду камери має потрапляти дошка або її частина. Наведений
 алгоритм не розрахований на відео, що містить декілька дошок, які знаходяться
 не в одній плоскій площині. Камера, що знімає це відео, може рухатись, проте
-чим більше вона нерухома, тим краще: алгоритм не буде працювати, якщо камера
-рухається постійно. Дошка на відео може перекриватися сторонніми об'єктами,
+чим більше вона нерухома ~---~ тим краще (алгоритм не буде працювати, якщо камера
+рухається постійно). Дошка на відео може перекриватися сторонніми об'єктами,
 проте бажано, щоб ці об'єкти були рухливими, щоб алгоритм виявлення рухомих
 об'єктів їх помічав та для подальшого оновлення написів на дошці.
 
