--- a/index.tex
+++ b/index.tex
@@ -30,6 +30,10 @@
 % % for tables
 % \usepackage[table,xcdraw]{xcolor}
 
+\theoremstyle{definition}
+\newtheorem{definition}{Означення}
+
+\counterwithout{equation}{chapter}
 
 \NewTotalDocumentCounter{totalfigures}
 \NewTotalDocumentCounter{totalbibitems}
