--- a/6_mask/3_bk_algorithm_applying.tex
+++ b/6_mask/3_bk_algorithm_applying.tex
@@ -5,11 +5,14 @@
 для пошуку мінімального розрізу на графі, що дозволяє знаходити
 маску рухомих об'єктів та має можливість налаштовувати ступінь взаємодії сусідніх
 пікселів.
-
+\begin{definition}
 Маскою рухомих об'єктів кадру \(F^{i}\) будемо називати бінарне
 зображення \(B^{i}:P \rightarrow \left\{ 0,1 \right\}\), де тим
 пікселям, в яких на відповідному кадрі \(F^{i}\) було помічено рух,
-відповідає одиниця, а іншим відповідає нуль. Для обраного користувачем
+відповідає одиниця, а іншим відповідає нуль.
+\end{definition}
+
+ Для обраного користувачем
 кроку \(s > 0\) на двох кадрах \(F^{i}\) і \(F^{i + s}\) рухомі об'єкти
 являють собою підмножину пікселів, колір яких було змінено більше, ніж
 на певне значення, з урахуванням зміни кольорів у сусідніх пікселях.
@@ -21,46 +24,26 @@
 
 \begin{figure}[H]
 	\centering
-	\begin{subfigure}[b]{0.55\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{images/prev_frame}
-		\caption{Попередній кадр $F^i$
-			\label{fig:yakovlev:bk_examples:a}
-		}
-	\end{subfigure}
-	
-	\begin{subfigure}[b]{0.55\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{images/next_frame}
-		\caption{Поточний кадр $F^{i+s}$
-			\label{fig:yakovlev:bk_examples:b}
-		}
-	\end{subfigure}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\ContinuedFloat
-	\begin{subfigure}[b]{0.55\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{images/inv_diff}
-		\caption{Інвертована різниця $F^i$ і $F^{i+s}$
-			\label{fig:yakovlev:bk_examples:c}
-		}
-	\end{subfigure}
-	
-	\begin{subfigure}[b]{0.55\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{images/next_with_mask}
-		\caption{Маска рухомих об'єктів на кадрі $F^{i+s}$
-			\label{fig:yakovlev:bk_examples:d}
-		}
-	\end{subfigure}
-	
+	\subfloat[Попередній кадр $F^i$]{
+		\includegraphics[width=0.7\textwidth]{images/prev_frame}
+		\label{fig:yakovlev:bk_examples:a}
+	}\\
+	\subfloat[Поточний кадр $F^{i+s}$]{
+		\includegraphics[width=0.7\textwidth]{images/next_frame}
+		\label{fig:yakovlev:bk_examples:b}
+	}\\
+	\subfloat[Інвертована різниця $F^i$ і $F^{i+s}$]{
+		\includegraphics[width=0.7\textwidth]{images/inv_diff}
+		\label{fig:yakovlev:bk_examples:c}
+	}\\	
+	\subfloat[Маска рухомих об'єктів на кадрі $F^{i+s}$]{
+		\includegraphics[width=0.7\textwidth]{images/next_with_mask}
+		\label{fig:yakovlev:bk_examples:d}
+	}
 	\caption{Процес створення маски рухомих об'єктів з відео \cite{yakovlev_discrete_math_video}
 		\label{fig:yakovlev:bk_examples}
 	}
-\end{figure}
-
+  \end{figure}
 
 Для того, щоб видалити всі рухомі об'єкти, які можуть перекривати дошку, ми
 беремо кадри \(F^{i}\) та \(F^{i + s}\)  ( Рис. \ref{fig:yakovlev:bk_examples},
@@ -71,7 +54,7 @@
 інтенсивностей (Рис. \ref{fig:yakovlev:bk_examples:c}). Зображення \(D^{i}\) подаємо на вхід
 Б-К алгоритму.
 
-Треба знайти маску $B^{i}:P \rightarrow \{0,1\}$ рухомих
+Знайдемо маску $B^{i}:P \rightarrow \{0,1\}$ рухомих
 об'єктів для кадрів \(F^{i}\) і \(F^{i + s}\).
 Введемо функції.
 \begin{equation*}
